# Nexus-agent-BE

./: .dockerignore  .env  Dockerfile  README.md  pyproject.toml  start.py
.github/workflows/: ecr-backend.yml
agentstate/: State.py
src/api/: mcptools.py  server.py
src/api/config/: config.yml  support.co
src/api/data/nexus/demo/: chroma.sqlite3
src/nexus/graph/: graph.py
src/nexus/guardrails/: guardrail.py
src/nexus/memory/: episodic_memory.py  rag_semantic_memory.py
src/nexus/nodes/: helper.py  nodes.py  router.py  worker.py
src/nexus/tools/: tools.py
src/nexus/utils/: Snapshot.py  State.py  constants.py  guardrails.py  vector_store.py
tests/: test_graph_e2e.py
tests/data/: e2e_dataset.json
